logs/dag_id=null_check/run_id=null_check__2025-05-20T104300.079992/task_id=run_null_check/attempt=1.log
[2025-05-20T10:45:39.002+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-05-20T10:45:39.030+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: null_check.run_null_check null_check__2025-05-20T10:43:00.079992 [queued]>
[2025-05-20T10:45:39.039+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: null_check.run_null_check null_check__2025-05-20T10:43:00.079992 [queued]>
[2025-05-20T10:45:39.039+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2025-05-20T10:45:39.402+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): run_null_check> on 2025-05-20 10:43:00.236345+00:00
[2025-05-20T10:45:39.407+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62: DeprecationWarning: This process (pid=106) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2025-05-20T10:45:39.408+0000] {standard_task_runner.py:64} INFO - Started process 111 to run task
[2025-05-20T10:45:39.408+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'null_check', 'run_null_check', 'null_check__2025-05-20T10:43:00.079992', '--job-id', '88', '--raw', '--subdir', 'DAGS_FOLDER/null_check.py', '--cfg-path', '/tmp/tmp7y8auvaf']
[2025-05-20T10:45:39.410+0000] {standard_task_runner.py:91} INFO - Job 88: Subtask run_null_check
[2025-05-20T10:45:39.450+0000] {task_command.py:426} INFO - Running <TaskInstance: null_check.run_null_check null_check__2025-05-20T10:43:00.079992 [running]> on host ce279338416b
[2025-05-20T10:45:39.519+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='null_check' AIRFLOW_CTX_TASK_ID='run_null_check' AIRFLOW_CTX_EXECUTION_DATE='2025-05-20T10:43:00.236345+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='null_check__2025-05-20T10:43:00.079992'
[2025-05-20T10:45:39.520+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-05-20T10:45:39.581+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-05-20T10:45:39.582+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 3:             WHERE table_schema = %s AND table_name = %s
                                         ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/null_check.py", line 16, in run_null_check
    cols = conn.execute(text(f"""
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/sql/elements.py", line 334, in _execute_on_connection
    return connection._execute_clauseelement(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1577, in _execute_clauseelement
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 3:             WHERE table_schema = %s AND table_name = %s
                                         ^

[SQL: 
            SELECT column_name FROM information_schema.columns 
            WHERE table_schema = %%s AND table_name = %%s
        ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-05-20T10:45:39.592+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=null_check, task_id=run_null_check, run_id=null_check__2025-05-20T10:43:00.079992, execution_date=20250520T104300, start_date=20250520T104539, end_date=20250520T104539
[2025-05-20T10:45:39.603+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 88 for task run_null_check ((psycopg2.errors.SyntaxError) ОШИБКА:  ошибка синтаксиса (примерное положение: "%")
LINE 3:             WHERE table_schema = %s AND table_name = %s
                                         ^

[SQL: 
            SELECT column_name FROM information_schema.columns 
            WHERE table_schema = %%s AND table_name = %%s
        ]
(Background on this error at: https://sqlalche.me/e/14/f405); 111)
[2025-05-20T10:45:39.622+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2025-05-20T10:45:39.634+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-05-20T10:45:39.637+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
